# OpenMPtoMPI

./: CMakeLists.txt  main.cpp
actions/: IncludeMPIAndASTAction.cpp  IncludeMPIAndASTActionFactory.cpp  PreprocessorAndASTAction.cpp  PreprocessorAndASTActionFactory.cpp
finders/: MainFunctionFinder.cpp  OpenMPPragmaFinder.cpp
pragmas/: OpenMPBarrierHandler.cpp  OpenMPDirectiveBaseHandler.h  OpenMPMasterHandler.cpp  OpenMPParallelForHandler.cpp  OpenMPParallelHandler.cpp  OpenMPSingleHandler.cpp
preprocessor/: IncludeMPIFrontendAction.cpp  IncludeMPIHeaderCallback.cpp  PreprocessorHeaderCallback.cpp
tests/: test1-converted.cpp  test1.cpp
utils/: FileUtils.cpp  FileUtils.h  StmtUtils.cpp  StmtUtils.h  VariableAnalyzer.cpp  VariableAnalyzer.h  VariablesHandler.cpp  VariablesHandler.h
